--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <script src="./assets/index.js" async defer></script>
+        <link rel="stylesheet" href="./assets/styles/index.css">
     </head>
     <body>
         Hello world!
