--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="./assets/styles/index.css">
     </head>
     <body>
-        Hello world!
+        <div id="root"></div>
     </body>
 </html>
